# MCalendar

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO  build_and_run.sh  build_release.sh  dev_run.sh  docker-compose.yml  example_config.toml  install.sh  mcalendar.service  readme.md  todo
.rpm/: mcalendar.spec
client/: Cargo.toml  favicon.zm  index.html  style.css
client/src/: lib.rs
docker/: Dockerfile  build.sh  config.toml  mcalendar_config.toml
docker/static/js/: site.js
mcal_db.sled/: conf  snap.0000000000000125
req/: Cargo.toml
req/src/: main.rs
server/: Cargo.toml  build.rs  sqlx-data.json
server/src/: data_access.rs  main.rs
server/src/calendar/: data_access.rs  holidays.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
sql/: 00_create_db_mcalendar.sql  01_create_table_events.sql  xx_grant_priviliges.sql
src/: data_access.rs  main.rs  model.rs
static/css/: style.css
templates/: index.hbs
templates_input/: index.hbs
templates_output/: index.html
templating_test/: Cargo.toml
templating_test/src/: main.rs
templating_test/templates_input/: index.hbs
templating_test/templates_output/: index.html  style.css
utils/exporter/: Cargo.toml
utils/exporter/src/: main.rs
webui/: index.html  site.js  style.css.map  style.sass
webui_mockup/: index.html
