[package]
name = "mcalendar"
version = "0.2.0"
authors = ["Vladimir Malky <vladimir.malky@gmail.com>"]
license = "GPL-3.0-only"
description = "Calendar"

[dependencies]
sled = "*"
chrono = "*"
clap = "*"
once_cell = "*"
serde = "*"
serde_derive = "*"
serde_json = "1.0"
handlebars = "*"
rouille = "2.2.0"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
mcalendar = { path = "/usr/bin/mcalendar" }
