[package]
name = "mcalendar"
version = "0.2.0"
authors = ["Vladimir Malky <vladimir.malky@gmail.com>"]
license = "GPL-3.0-only"
description = "Calendar"

[dependencies]
postgres = { version = "0.15", features = ["with-chrono"] }
#sled = "0.23.*"
chrono = "0.4.6"
clap = "2.33.0"
once_cell = "0.1.8"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0"
handlebars = "1.1.0"
rouille = "2.2.0"
reqwest = "0.9.15"
toml = "0.4.9"