[package]
name = "mcalendar"
version = "0.3.0"
repository = "https://github.com/vctibor/MCalendar"
authors = ["Vladimir Ctibor <vladimir.ctibor@gmail.com>"]
description = "Simple self-hosted calendar"
license = "GPL-3.0-only"
readme = "./readme.md"
edition = "2018"

[workspace]
members = [
    "client",
    "server",
    "utils/exporter"
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
