[package]
name = "mcalendar_server"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[build-dependencies]
actix-web-static-files = "3.0"

[dependencies]
tokio = { version = "1", features = ["full"] }

#actix = "4"
actix-web = "3.0"
actix-rt = "2.1.0"
#actix-service = "=2.0.0-beta.3"
actix-web-static-files = "3.0.5"
#tokio = { version = "0.3", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

chrono = "0.4"

reqwest = "0.11"

mcalendar_shared = { path = "../shared" }