[package]
name = "mcalendar_server"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[build-dependencies]
actix-web-static-files = { git = "https://github.com/rich-murphey/actix-web-static-files.git", branch = "actix-4" }

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = "0.4"
reqwest = "0.11"
once_cell = "1.7"

sqlx = { version = "0.5", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "time",
    "offline"
]}

# https://stackoverflow.com/questions/66119865/how-do-i-use-actix-web-3-and-rusoto-0-46-together
actix-web = "4.0.0-beta.3"
actix-rt = "2.0.0-beta.2"

# https://github.com/kilork/actix-web-static-files/pull/35
# https://github.com/rich-murphey/actix-web-static-files.git
# actix-web-static-files = "3.0.5"
actix-web-static-files = { git = "https://github.com/rich-murphey/actix-web-static-files.git", branch = "actix-4" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

mcalendar_shared = { path = "../shared" }