[package]
name = "mcalendar_server"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[build-dependencies]
static-files = "0.2.4"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = "0.4"
reqwest = "0.11"
once_cell = "1.7"
sqlx = { version = "0.5", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "time",
    "offline"
]}
actix-web = "4.0"
actix-web-static-files = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mcalendar_shared = { path = "../shared" }
static-files = "0.2.4"